# Programming-2

./: README.md  z2_testing
Zadanie 0/prvocisrozklad/: CMakeLists.txt  jozef_barcak.c
Zadanie 1/: CMakeLists.txt  z1.c
z2_clion_project/src/: z2.c
z2_testing/python_scripts/: img2txt.py
z3/: CMakeLists.txt  z3.c
z4_project/src/: z4.c
z5_project/src/: z5.c
z6/: CMakeLists.txt  z6.c
z6/monopoly_demo/: CMakeLists.txt  main.c
z6/monopoly_demo2/: CMakeLists.txt
z6/monopoly_demo2/src/: z6.c
