cmake_minimum_required(VERSION 3.20)
project(z6)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
IF(UNIX)
    find_package(Curses)
    include_directories(${CURSES_INCLUDE_DIR})
ENDIF ()
add_executable(z6 z6.c)
IF(WIN32)
    target_link_libraries(z6 ncurses)
ELSEIF (UNIX)
    target_link_libraries(z6 ${CURSES_LIBRARIES})
ENDIF ()